--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -48,6 +48,16 @@ jobs:
     - name: Run Credo
       run: mix credo
 
+    - name: Check Coverage
+      run: mix coveralls.json
+      env:
+        MIX_ENV: test
+
+    - name: Run Codecov Script
+      run: curl -Os https://uploader.codecov.io/latest/macos/codecov chmod +x codecov ./codecov
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
     - name: Install dependencies
       run: mix deps.get
 
