--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -54,7 +54,7 @@ jobs:
         MIX_ENV: test
 
     - name: Run Codecov Script
-      run: curl -Os https://uploader.codecov.io/latest/macos/codecov && chmod +x codecov && ./codecov 
+      run: curl -Os https://uploader.codecov.io/latest/alpine/codecov chmod +x codecov ./codecov 
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
